# commutative-diagrams

./: .envrc  .gitignore  LICENSE  Makefile  README.md  _CoqProject  commutative-diagrams.opam  coq-commutative-diagrams.opam  dune  dune-project  fix-coqmakefile.patch  flake.nix  hott.nix  install.sh  unimath.nix
coq/: Makefile  _CoqProject  coq-commutative-diagrams-plugin.install  coq-commutative-diagrams-plugin.opam  coq-commutative-diagrams-unimath.opam  coq-commutative-diagrams.opam  default.nix  dune-project  plugin.nix  unimath.nix
coq/plugin/: META.commutative-diagrams  META.coq-commutative-diagrams-plugin  build.ml  build.mli  data.ml  data.mli  diagrams_plugin.mlpack  dune  enumerate.ml  enumerate.mli  env.ml  env.mli  extractor.ml  extractor.mli  features.ml  features.mli  g_diagrams.mlg  graph.ml  graph.mli  graphbuilder.ml  graphbuilder.mli  hott.ml  hott.mli  hyps.ml  hyps.mli  lemmas.ml  lemmas.mli  main.mli  msgpack.ml  msgpack.mli  pa.ml  postComposeHook.ml  protocol.ml  protocol.mli  query.ml  query.mli  real.ml  real.mli  renderer.ml  renderer.mli  (+7 more)
coq/plugin/elpi/: msgpack.elpi
coq/plugin/hooks/: preComposeHook.ml
coq/theories/: Loader.v  Tests.v  dune
engine/: .gitignore  Cargo.toml  default.nix
engine/bevy/: Cargo.toml
engine/bevy/src/: main.rs
engine/desktop/: Cargo.toml
engine/desktop/src/: main.rs
engine/lib/: Cargo.toml
engine/lib/src/: autofill.rs  data.rs  dsl.rs  lib.rs  realizer.rs  remote.rs  runtime.rs  ui.rs
engine/lib/src/autofill/: enumeration.rs  solver.rs
engine/lib/src/autofill/hooks/: precompose.rs
engine/lib/src/graph/eq/: definition.rs
engine/lib/src/remote/: remote.rs  rpc.rs
engine/lib/src/remote/protocol/: feature.rs  graph.rs  parse.rs  status.rs  tag.rs
engine/lib/src/ui/: code.rs  exit_script.rs  graph.rs  lemmas.rs  main.rs  toolbar.rs  vm.rs
engine/lib/src/ui/graph/: faces.rs  lemma.rs  vm.rs  widget.rs
engine/lib/src/ui/vm/: apply.rs  insert.rs  merge.rs
engine/lib/src/vm/: ast.rs  compiler.rs  decompose.rs  graph.rs  interpreter.rs  label.rs  layout.rs  lemmas.rs  namer.rs  order.rs  sides.rs  status.rs  store.rs  style.rs  undo.rs  vm.rs
engine/lib/src/vm/actions/: decompose.rs  hide.rs  insert.rs  lemma.rs  merge.rs  pushout.rs  shrink.rs  solve.rs  split.rs  unif_eq.rs
engine/lib/src/vm/decompose/: orient.rs  planar.rs  step.rs  trivialize.rs
engine/lib/src/vm/layout/: engine.rs  nodes.rs
engine/lib/src/vm/lemmas/: tree.rs
engine/server/: Cargo.toml
engine/server/src/: main.rs
engine/src/: anyterm.rs  autofill.rs  data.rs  dsl.rs  graph.rs  lemmas.rs  main.rs  normalize.rs  normalizer.rs  parser.rs  pretty.rs  realizer.rs  remote.rs  rpc.rs  simpleq.rs  substitution.rs  tactics.rs  ui.rs  unification.rs  vm.rs
engine/src/autofill/: enumeration.rs  hooks.rs  solver.rs  union_find.rs
engine/src/autofill/hooks/: postcompose.rs  precompose.rs
engine/src/data/: features.rs  store.rs
engine/src/graph/: definition.rs  enumeration.rs  eq.rs  graphviz.rs  layout.rs  mces.rs  parser.rs  prepare.rs
engine/src/graph/eq/: definition.rs  repr.rs
engine/src/remote/: engine.rs  mock.rs  protocol.rs  remote.rs  rpc.rs
engine/src/remote/protocol/: graph.rs  parse.rs  seq.rs  status.rs  vec.rs
engine/src/tactics/: insert.rs  split.rs
engine/src/ui/: code.rs  exit_script.rs  faces.rs  graph.rs  graphdisplay.rs  layout.rs  lemmas.rs  toolbar.rs  vm.rs
engine/src/ui/graph/: graph.rs  lemma.rs  vm.rs  widget.rs
engine/src/ui/vm/: apply.rs  insert.rs  merge.rs
engine/src/vm/: actions.rs  asm.rs  ast.rs  compiler.rs  config.rs  decompose.rs  engine.rs  graph.rs  identify.rs  interpreter.rs  label.rs  layout.rs  lemmas.rs  namer.rs  order.rs  parser.rs  planar.rs  sides.rs  status.rs  store.rs  style.rs  undo.rs  vm.rs
engine/src/vm/actions/: alias.rs  decompose.rs  hide.rs  insert.rs  label.rs  layout.rs  lemma.rs  merge.rs  pushout.rs  refine.rs  shrink.rs  sides.rs  solve.rs  split.rs  unif_eq.rs
engine/src/vm/decompose/: planar.rs  step.rs
engine/src/vm/layout/: ccs.rs  edges.rs  engine.rs  nodes.rs  precompute.rs
engine/src/vm/lemmas/: tree.rs
engine/web/: Cargo.toml  Makefile  commdiag.js  index.html
engine/web/src/: io.rs  js.rs  lib.rs
opam/: coq-commutative-diagrams.opam
src/: META.diagrams-plugin  commutation.ml  commutation.mli  contextTypes.ml  contextTypes.mli  data.ml  data.mli  diagrams_plugin.mlpack  dune  enumerate.ml  enumerate.mli  env.ml  env.mli  eq.ml  eq.mli  extractor.ml  extractor.mli  g_diagrams.mlg  hott.ml  hott.mli  hyps.ml  hyps.mli  hypsPrinter.ml  hypsPrinter.mli  main.ml  monad.ml  monad.mli  morphisms.ml  morphisms.mli  norm.ml  norm.mli  normalisation.ml  normalisation.mli  pa.ml  renderer.ml  simplEq.ml  simplEq.mli  store.ml  store.mli  unionFind.ml  (+3 more)
src/hooks/: epimorphismHook.ml  monomorphismHook.ml  monomorphismHook.mli  postComposeHook.ml  preComposeHook.mli
theories/: Diagrams.v  Loader.v  Tests.v  dune
