(lang dune 2.9)
(name coq-commutative-diagrams)
(using coq 0.3)
(generate_opam_files true)

(source (github dwarfmaster/categories-lp))
(authors "Luc Chabassier")
(maintainers "luc@dwarfmaster.net")
(license MIT)


(package
 (name coq-commutative-diagrams)
 (synopsis "A Coq plugin to deal with commutative diagrams"))
