(lang dune 3.8)
(name coq-commutative-diagrams)
(using coq 0.8)
(generate_opam_files true)

(source (github dwarfmaster/commutative-diagrams))
(authors "Luc Chabassier")
(maintainers "luc@dwarfmaster.net")
(license MIT)


(package
 (name coq-commutative-diagrams)
 (synopsis "A Coq plugin to deal with commutative diagrams")
 (depends
   (ocaml (>= 4.14))
   (coq (and (>= 8.16) (< 8.17~)))
   (coq-unimath (= 20230321))))
