# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "commutative-diagrams-engine"
version = "0.1.0"
edition = "2021"

[package.metadata.inwelling]
lens-rs_generator = true

[dependencies]
clap = { version = "4.0.32", features = [ "derive" ] }
log = "0.4.17"
log-panics = "2.1.0"
simplelog = "0.12.0"
egui = "0.22"
bevy = "0.11"
bevy_egui = "0.21.0"

[dependencies.commutative-diagrams-engine-lib]
path = "../lib"
