# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "commutative-diagrams-engine-lib"
version = "0.1.0"
edition = "2021"

[package.metadata.inwelling]
lens-rs_generator = true

[dependencies]
serde = { version = "1.0.147", features = [ "derive" ] }
serde_json = "1.0"
rmp = "^0.8"
rmp-serde = "1.1.1"
itertools = "0.10.5"
log = "0.4.17"
egui = "0.23"
nom = "7.1.3"
chrono = "0.4.31"
futures = "0.3.28"
