[package]
name = "commutative-diagrams-engine-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
tokio-util = { version = "0.7.9", features = [ "codec" ] }
warp = "0.3.5"
futures = "0.3.28"
futures-util = "0.3.28"
tempfile = "3.8.0"
log = "0.4.17"
