[package]
name = "commutative-diagrams-engine-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.37"
eframe = "0.22"
log = "0.4.17"
js-sys = "0.3.64"
futures = "0.3.28"

[dependencies.commutative-diagrams-engine-lib]
path = "../lib"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
